--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.15"
 bevy_egui = "0.31.1"
+catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
 image = "0.25.5"
 rand = "0.8.5"
 winit = "0.30.7"
