add enemy spawner

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bevy_egui = "0.31.1"
 catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
 image = "0.25.5"
 rand = "0.8.5"
+rand_distr = "0.5.0-beta.2"
 winit = "0.30.7"
 
 # Enable a small amount of optimization in the dev profile.
