--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,34 @@
-#name: Build and deploy game
-#
-#on:
-#  push:
-#    branches:
-#      - master
-#
-#jobs:
-#  build:
-#    name: Build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - uses: dtolnay/rust-toolchain@master
-#        with:
-#          toolchain: stable
-#          targets: wasm32-unknown-unknown
-#
-#      - uses: Swatinem/rust-cache@v2
-#        with:
-#          cache-on-failure: true
-#
-#      - name: Install dependencies
-#        run: sudo apt-get update; sudo apt-get install --no-install-recommends libasound2-dev libudev-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
-#
-#      - name: Install bevy_cli
-#        run: cargo install --git https://github.com/TheBevyFlock/bevy_cli bevy_cli
-#
-#      - name: Build game
-#        # The first run may prompt to install dependencies, hence the `--yes` flag.
-#        run: bevy build --yes --example color_test web --bundle
-#
-#      - name: Upload the artifacts
-#        uses: actions/upload-pages-artifact@v2
-#        with:
-#          path: 'target/bevy_web/web'
-#
-#  deploy:
-#    needs: [ build ]
-#    permissions:
-#      pages: write
-#      id-token: write
-#    environment:
-#      name: github-pages
-#      url: ${{steps.deployment.outputs.page_url}}
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Deploy to GitHub Pages
-#        id: deployment
-#        uses: actions/deploy-pages@v2
+name: Build and deploy game
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Install trunk
+        uses: jetli/trunk-action@v0.2.0
+        with:
+          version: 'latest'
+
+      - name: Install wasm32 target
+        run: rustup target add wasm32-unknown-unknown
+
+        # The TRUNK_BUILD_PUBLIC_URL is to make sure relative paths work in a GH pages project
+      - name: Build
+        run: env TRUNK_BUILD_PUBLIC_URL="./" trunk build --release
+
+      - name: Deploy to target branch
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: gh-pages
+          force_orphan: true
