--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.15.1"
-bevy_egui = "0.32.0"
+bevy_egui = { version = "0.32.0", features = ["immutable_ctx"] }
+egui-notify = "0.18.0"
 image = "0.25.5"
 rand = "0.8.5"
 winit = "0.30.8"
