--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,40 @@ on:
       - master
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    permissions:
+      pages: write
+      id-token: write
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Install trunk
-        uses: jetli/trunk-action@v0.2.0
+      - name: Setup Rust toolchain
+        uses: hecrj/setup-rust-action@v2.0.1
         with:
-          version: 'latest'
+          rust-version: stable
 
-      - name: Install wasm32 target
-        run: rustup target add wasm32-unknown-unknown
+      - name: Build WASM artifact to _site/
+        run: make build-wasm
 
-        # The TRUNK_BUILD_PUBLIC_URL is to make sure relative paths work in a GH pages project
-      - name: Build
-        run: env TRUNK_BUILD_PUBLIC_URL="./" trunk build --release
+      - name: Copy assets to static folder
+        run: |
+          cp -r $GITHUB_WORKSPACE/assets/ _site/assets
 
-      - name: Deploy to target branch
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3.0.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
-          force_orphan: true
+          path: _site/
+          retention-days: 30
+
+      - name: Deploy GitHub Pages site
+        uses: actions/deploy-pages@v4.0.5
