--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           rust-version: stable
 
-      - name: Build WASM artifact to _site/
+      - name: Build WASM artifact to docs/
         run: make build-wasm
 
       - name: Copy assets to static folder
         run: |
-          cp -r $GITHUB_WORKSPACE/assets/ _site/assets
+          cp -r $GITHUB_WORKSPACE/assets/ docs/assets
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -38,8 +38,8 @@ jobs:
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3.0.0
         with:
-          path: _site/
-          retention-days: 30
+          path: docs/
+          retention-days: 90
 
       - name: Deploy GitHub Pages site
         uses: actions/deploy-pages@v4.0.5
