--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ egui-notify = "0.18.0"
 image = "0.25.5"
 rand = "0.8.5"
 rand_distr = "0.4"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 winit = "0.30.8"
 
 # Enable a small amount of optimization in the dev profile.
