--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.15.1"
 bevy_egui = { version = "0.32.0", features = ["immutable_ctx"] }
+egui_dnd = "0.11.0"
 egui-notify = "0.18.0"
 image = "0.25.5"
 rand = "0.8.5"
